fixing contrast

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -29,3 +29,7 @@ body {
 .btn {
   color: #363644 !important;
 }
+
+.site-footer-credits {
+  color: #363644 !important;
+}
